fixed Login visibilty

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -35,6 +35,7 @@ nav {
     width: 50px;
     height: 70%;
     text-align: center;
+    visibility: hidden;
 }
 .login div:hover {
     color: rgba(240, 110, 4, 0.85);
